--- a/index.html
+++ b/index.html
@@ -5,11 +5,112 @@
         <meta charset="utf-8"/>
         <meta name="author"content="dharma"/>
         </head>
-        <body>
+        <body text="#ffffff" background="images/ab.jpg">
+            <div style="width:1140px;margin;auto auto;border;4px solid #eeffcc; min                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            height;800px;">
+        <!--comments in html-->
+        <header>
+            <img src="image/i.jpg"alt="girls generation"
+            title="girls generation of website"
+        </header>
+        <header>
             <h1>welcome to the site</h1>
-            <p>
-                this is demo photograph.
-             </p>
-             <p>another paragraph</p>
-                </body>
+        </header>
+        <nav>
+            <ol>
+                <li>home</li>
+                <li>about</li>
+                <ol>
+            <li>mission</li>
+            <li>vision</li>
+            <li>staff</li>
+            </ol>
+            <li>sales dpt</li>
+            <li>account depart</li>
+        </ol>
+                <li>download</li>
+                </ol><!---mainmenu close -->
+        </nav>
+        <main>
+
+            <section>
+                 <!---
+                 #<ul>is used for listening items 
+                     artibute type="disc/circle/square"-->
+                     <ol type ="square">
+                    <li>malika</li>
+                     <li>nikita</li>
+                    </ol>
+                    <!--- description list
+                    # <dl</dl>\
+                #<dt><>/dt>description title 
+                #<dt></dt>description data 
+            -->
+                                                                                                                                        </section>
+        <section>
+<p>
+   <font face="Jokerman">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+    It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+    It was popularised in the 1 960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+    but also the leap into electronic typesetting, remaining essentially unchanged. 
+    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    <font/>
+</p>
+
+        </section>
+
+        <section>
+            <ol>
+<li>computer</li>
+<li>computer</li>
+<li>computer</li>
+            </ol>
+<dl>
+            <dt>CPU</dt>
+            <dl> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+            It has survived not only five centuries,
+            but also the leap into electronic typesetting, remaining essentially unchanged. </dl>
+        
+           <dt>Monitor</dt>
+           <dd>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+           when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+           It has survived not only five centuries,
+           but also the leap into electronic typesetting, remaining essentially unchanged. 
+          </dd>
+</dl>
+
+<ol type="A" start="e">Asia
+    <ol>Bagmati
+     <ul>kathmandu
+        <ul>Area l</ul> 
+        <li>kritipur</li> 
+        <li>pharping</li> 
+        <ul>Area 2 </ul>  
+     <li>lalitpur</li>
+     <li>patan</li>    
+     </ul>
+     <ul>bhaktapur
+     <ul>lokanthali</ul>
+     </ul>
+     </ol>
+</ol>
+<ol>Mechi
+    <ol>Ilam</ol>
+    <ol>jhapa</ol>
+    <ol>taplejung</ol>
+</ol>
+
+
+        </section>
+             </main>
+             <footer>
+                 2019,yoursite.com,All right reserved.
+             </footer>
                 </html>
